# Multi-Detect

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
configs/datasets/: fire-smoke-v3.plan.json  fire-smoke-v4-balanced.plan.json
configs/missions/: fire_patrol.demo.json  fire_suppression.demo.json  fire_suppression_disposable.demo.json  fire_suppression_fixed_wing.demo.json
configs/models/: environment_model_source_lock.json  environment_risk_detector_contract.json  nvidia_tao_person_reid_v1_2.json  openvino_vehicle_reid_0001.json  semantic_context_contract.json  ultralytics_yolo26n_coco80.json  ultralytics_yolo26n_coco80_trt86_raw.json  visdrone_yolo26n_priority_candidate.json
configs/schemas/: inert-payload-bench-record.schema.json  integration-evidence.schema.json  mission.schema.json  qgc-telemetry-snapshot.schema.json
deploy/jetson/: README.md  multi-detect.service  runtime.env.example
docs/: architecture.md  data-link-alerts.md  environment-perception-model-plan.md  g20-gr01-integration.md  goal-acceptance-20260715.md  implementation-roadmap.md  integration-input-checklist.md  live-camera-jetson.md  model-data-sources.md  offline-ai-optimization-20260716.md  payload-controller-hil-protocol.md  qgc-target-geolocation.md  qgc-windows-release.md  repository-architecture.md  safety-case.md  three-mode-multitarget-system.md  tracking-identity-evaluation.md  upstream-baseline.md
examples/: evaluation_ground_truth.demo.jsonl  evaluation_predictions.demo.jsonl  fire_fixed_wing_hil_replay.jsonl  fire_mission_replay.jsonl  integration_evidence.software_hil.json  payload_inventory.demo.json  payload_inventory.failed.demo.json  qgc_telemetry_snapshot.template.json  tracking_identity_ground_truth.demo.jsonl  tracking_identity_predictions.demo.jsonl
ground-control/: README.md
ground-control/MultiDetectGCS/: .clang-format  .multidetect-gcs-root  .multidetect-upstream.json  .pre-commit-config.yaml  CMakeLists.txt  justfile
ground-control/MultiDetectGCS/custom/: CMakeLists.txt  README.md  custom.qrc
ground-control/MultiDetectGCS/custom/cmake/: CustomOverrides.cmake
ground-control/MultiDetectGCS/custom/res/Custom/MultiDetect/: FixedWingVideoHud.qml  MultiDetectState.qml  MultiDetectVideoOverlay.qml
ground-control/MultiDetectGCS/custom/src/: CustomPlugin.cc  CustomPlugin.h  FlyViewCustomLayer.qml  FlyViewVideo.qml  MultiDetectConfigure.qml  MultiDetectDepthGridProtocol.cc  MultiDetectDepthGridProtocol.h  MultiDetectDepthGridReceiver.cc  MultiDetectDepthGridReceiver.h  MultiDetectOperatorController.cc  MultiDetectOperatorController.h  MultiDetectOperatorProtocol.cc  MultiDetectOperatorProtocol.h  MultiDetectPagedStatusSequence.h  MultiDetectTargetEvidenceStore.cc  MultiDetectTargetEvidenceStore.h  PlanViewRightPanel.qml  SelectViewDropdown.qml
ground-control/MultiDetectGCS/custom/tests/: MultiDetectDepthGridProtocolSelfTest.cc  MultiDetectOperatorProtocolSelfTest.cc  operator_closed_loop_hil.py
ground-control/MultiDetectGCS/src/Comms/: CMakeLists.txt  LinkManager.cc  TCPLink.cc
ground-control/MultiDetectGCS/src/FirmwarePlugin/: CMakeLists.txt
models/: README.md  manifest.example.json
scripts/: audit_yolo_dataset.py  bootstrap_jetson_orin.sh  build_hard_negative_dataset.py  build_jetson_common_detector_engine.sh  build_jetson_priority_detector_engine.sh  build_jetson_reid_engine.sh  build_jetson_semantic_context_engine.sh  build_jetson_vehicle_reid_engine.sh  build_multisource_dataset.py  build_scenario_balanced_dataset.py  calibrate_fire_thresholds.py  capture_charuco_calibration.py  collect_jetson_info.sh  deploy_jetson_multimodal_ranging.ps1  download_public_pedestrian_tracking.py  evaluate_common_detector_tiling.py  evaluate_fire_video.py  evaluate_negative_images.py  evaluate_person_tracking_video.py  evaluate_priority_video.py  evaluate_yolo_candidate.py  export_jetson_common_detector_onnx.py  export_outdoor_depth_calibration_candidates.py  fit_outdoor_depth_calibration.py  g20_viewport_mapping_demo.py  jetson_static_preflight.py  manage_jetson_service.ps1  mine_camera_hard_negatives.py  payload_hil_protocol_demo.py  payload_hil_udp_loopback_demo.py  payload_mission_hil_loopback_demo.py  pixhawk_readonly_hil_sender.py  prepare_dfire_dataset.py  prepare_visdrone_dataset.py  px4_sitl_gcs_heartbeat.py  px4_sitl_mission_uploader.py  record_jetson_rtsp_evidence.sh  repair_gr01_v6x_baud.py  run_goal_acceptance.ps1  run_jetson_fire_patrol.sh  (+13 more)
src/multidetect/: __init__.py  acceptance.py  adaptive_ranging.py  aircraft_appearance.py  alerts.py  appearance_reid.py  approach_acceptance.py  approach_hil.py  approach_live.py  assignment.py  attitude_camera_motion.py  audit.py  authorization.py  calibration.py  camera_bench.py  camera_calibration.py  cli.py  compat.py  config.py  dataset_audit.py  dataset_plan.py  dataset_prepare.py  deployment_planner.py  depth_calibration.py  depth_grid_udp.py  domain.py  engine_provenance.py  live.py  (+76 more)
tests/: test_acceptance.py  test_adaptive_ranging.py  test_aircraft_appearance.py  test_alerts.py  test_appearance_reid.py  test_approach_acceptance.py  test_approach_hil.py  test_approach_live.py  test_attitude_camera_motion.py  test_audit.py  test_calibration.py  test_camera_bench.py  test_camera_calibration.py  test_capture_charuco_calibration.py  test_cli.py  test_config.py  test_dataset_audit.py  test_dataset_plan.py  test_dataset_prepare.py  test_deployment_planner.py  test_depth_calibration.py  test_depth_calibration_export.py  test_depth_calibration_validation.py  test_depth_grid_udp.py  test_download_public_pedestrian_tracking.py  test_engine_provenance.py  test_evaluate_fire_video.py  test_evaluate_negative_images.py  test_evaluate_person_tracking_video.py  test_evaluate_priority_video.py  test_evaluation.py  test_fixed_camera_observation.py  test_fixed_wing_aim_control.py  test_gr01_bench.py  test_integration_evidence.py  test_jetson_bench.py  test_jetson_deployment.py  test_jetson_profile.py  test_live.py  test_manual_tracking.py  (+74 more)
tmp/: airspeed_live_trigger.py  airspeed_response_capture.py
(+69 files in other folders)
