[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-detect"
version = "0.1.0"
description = "Safety-first mission orchestration prototype for non-hazardous UAV payload deployment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Multi-Detect contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
vision = ["numpy>=1.26", "opencv-contrib-python>=4.10", "onnxruntime>=1.18"]
vision-gpu = [
  "numpy>=1.26",
  "opencv-contrib-python>=4.10",
  "onnxruntime-gpu==1.22.0",
]
pixhawk = ["pymavlink>=2.4"]
model-tools = ["onnx>=1.16,<2"]

[project.scripts]
multi-detect = "multidetect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
